--- a/src/artery/CMakeLists.txt
+++ b/src/artery/CMakeLists.txt
@@ -171,6 +171,8 @@ if(WITH_TESTBED)
     add_subdirectory(testbed)
 endif()
 
+add_subdirectory(ros2)
+
 install(TARGETS core LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
 set_property(TARGET core APPEND PROPERTY INSTALL_NED_FOLDERS ${CMAKE_INSTALL_DATADIR}/ned/artery)
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/ DESTINATION share/ned/artery FILES_MATCHING PATTERN "*.ned")
